[package]
name = "csvgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
gzp = { version = "0.11.3", features = ["flate2"] }
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
